# iuf-trading-room

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  P0-AUDIT-BOARD.md  PROJECT_BRIEFING.md  RAILWAY_DEPLOYMENT.md  RAILWAY_RUNBOOK.md  README.md  TRADING_ROOM_UI_REDESIGN_BRIEF_ZH_TW.md  drizzle.config.ts  package.json  pnpm-lock.yaml  secret_inventory.md  tsconfig.base.json  turbo.json
evidence_content_sprint_2026-04-23/: bruce_b1_w1_runtime_verify.md
reports/: P0-AUDIT-BOARD.md  PRODUCT_MAP_2026_07.md  api_tests_ci_audit_20260707.md  ci_paths_filter_smoke_test.md
scripts/: append-ai-rec-v2-tests.py  append-ai-rec-v3-tests.py  append-mojibake-tests.py  append-product-priority-tests.py  append_tests_bf10_v47.py  apply-theme-names-patch.ts  check-db-execrows.mjs  concurrent_idempotency_race.ts  dedup-companies.ts  import-to-production.ts  migrate.ts  monitor-prod-schema-sync.ps1  patch-ai-rec-v2-cron.py  patch-ai-rec-v2-server.py  patch-ai-rec-v3-server.py  patch-server-mojibake.py  post-deploy-verify.mjs  pr_radar_gap_body.md  run-t05-and-save-evidence.ps1  seed-owner.ts  smoke-api.ts  smoke-autopilot-dryrun.ts  start-api-railway.mjs  sync-my-tw-coverage-graph-to-production.ts  sync-my-tw-coverage-to-production.ts  sync-tw-coverage.ts  verify-worker-content-api.ts  w6_d4_git_ops.py  (+3 more)
services/market-agent/: README.md  main.py  pyproject.toml
services/market-agent/src/agent/: __init__.py  heartbeat.py  ingest_pusher.py  main.py  redis_snapshot.py  source_status.py
services/market-agent/tests/: test_ingest_pusher.py  test_main.py
(+1993 files in other folders)
