[project]
name = "market-agent"
version = "0.1.0"
description = "IUF Market Agent — W7 KGI Windows Market Data pusher (mock-only until libCGCrypt.so)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

# TODO(libCGCrypt): add kgisuperpy once libCGCrypt.so arrives from KGI internal
# dependencies += ["kgisuperpy>=2.0.3"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
