[project]
name = "market-agent"
version = "0.2.0"
description = "IUF Market Agent — W7 H3: Windows service skeleton with FastAPI health + ingest pusher"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
]

# TODO(libCGCrypt): add kgisuperpy once libCGCrypt.so arrives from KGI internal
# dependencies += ["kgisuperpy>=2.0.3"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
